[package]
name = "furui-common"
version = "0.1.0"
edition = "2018"

[features]
default = []
user = ["aya", "libc"]

[dependencies]
furui-macros = { path = "../furui-macros" }
aya = { git = "https://github.com/aya-rs/aya", branch = "main", optional = true }
aya-bpf-cty = { git = "https://github.com/aya-rs/aya", branch = "main" }
libc = { version = "0.2", optional = true }

[lib]
path = "src/lib.rs"
