[package]
name = "furui-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["aya", "libc"]

[dependencies]
furui-macros = { path = "../furui-macros" }
aya = { workspace = true, optional = true }
aya-ebpf = { workspace = true }
libc = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
