[package]
name = "furui-ebpf"
version = "0.1.0"
edition = "2018"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
furui-common = { path = "../furui-common" }

[[bin]]
name = "furui"
path = "src/main.rs"

[profile.release]
panic = "abort"

[workspace]
members = []
