[package]
name = "furui-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya-log", branch = "main" }
furui-common = { path = "../furui-common" }


[[bin]]
name = "bind"
path = "src/bind.rs"

[[bin]]
name = "connect"
path = "src/connect.rs"

[[bin]]
name = "close"
path = "src/close.rs"

[[bin]]
name = "ingress"
path = "src/ingress.rs"

[[bin]]
name = "ingress_icmp"
path = "src/ingress_icmp.rs"

[[bin]]
name = "egress"
path = "src/egress.rs"

[[bin]]
name = "egress_icmp"
path = "src/egress_icmp.rs"


[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
