[package]
name = "furui"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aya = { version = ">=0.11", features = ["async_tokio"] }
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
furui-common = { path = "../furui-common", features = ["user"] }
anyhow = "1.0"

log = "0.4"
tracing = "0.1"
tracing-core = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
structopt = { version = "0.3" }
tokio = { version = "1.5", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync"] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
libc = "0.2"
bytes = "1.1"
chrono = "0.4"
dns-lookup = "1.0.8"
bollard = "0.12.0"
futures = "0.3.21"
thiserror = "1"

[[bin]]
name = "furui"
path = "src/main.rs"
