[package]
name = "furui"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-bpf-cty = { git = "https://github.com/aya-rs/aya", branch = "main" }
furui-common = { path = "../furui-common", features = ["user"] }
anyhow = "1.0"

log = "0.4"
tracing = "0.1"
tracing-core = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.5", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync"] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9.13"
serde_json = "1.0"
libc = "0.2"
bytes = "1.1"
chrono = "0.4"
dns-lookup = "1.0.8"
bollard = "0.13.0"
futures = "0.3.21"
thiserror = "1"
pnet_datalink = "0.31.0"
md5 = "0.7.0"
prost = "*"
tonic = "0.8.2"
tower = "0.4"

[build-dependencies]
tonic-build = "0.8.2"

[[bin]]
name = "furui"
path = "src/main.rs"
